--- a/android/assets/jsons/translations/Polish.properties
+++ b/android/assets/jsons/translations/Polish.properties
@@ -105,7 +105,7 @@ They promised not to settle near us ([count] turns remaining) = Przysięgli się
          
 Unforgivable = Niewybaczalny
  # Requires translation!
-Afraid = 
+Afraid =
 Enemy = Wrogi
 Competitor = Konkurent 
 Neutral = Neutralny
@@ -164,9 +164,9 @@ Build [improvementName] on [resourceName] (200 Gold) = Zbuduj [improvementName] 
 Gift Improvement = Podaruj Ulepszenie
 
  # Requires translation!
-Diplomatic Marriage ([amount] Gold) = 
+Diplomatic Marriage ([amount] Gold) = Małżeństwo dyplomatyczne ([amount]) Gold)
  # Requires translation!
-We have married into the ruling family of [civName], bringing them under our control. = 
+We have married into the ruling family of [civName], bringing them under our control. =
  # Requires translation!
 [civName] has married into the ruling family of [civName2], bringing them under their control. = 
 
@@ -183,14 +183,14 @@ Influence = Wpływy
 Reach 30 for friendship. = Osiągnij 30 dla przyjaźni.
 Reach highest influence above 60 for alliance. = Osiągnij najwyższy wpływ ponad 60 dla sojuszu.
  # Requires translation!
-When Friends: = 
+When Friends: = Jako Przyjaciel:
  # Requires translation!
-When Allies: = 
+When Allies: = Jako Sojusznik:
  # Requires translation!
-The unique luxury is one of: = 
+The unique luxury is one of: = Ten surowiec luksusowy to jeden z:
 
  # Requires translation!
-Demand Tribute = 
+Demand Tribute = Zażądaj Daninę
  # Requires translation!
 Tribute Willingness = 
  # Requires translation!
@@ -198,7 +198,7 @@ Tribute Willingness =
  # Requires translation!
 Major Civ = 
  # Requires translation!
-No Cities = 
+No Cities = Brak miast
  # Requires translation!
 Base value = 
  # Requires translation!
@@ -762,7 +762,7 @@ Captured! = Pojmany!
 defence vs ranged = obrona przeciw atakom dystansowym
 [percentage] to unit defence = [percentage] do obrony
 Attacker Bonus = Premia dla atakującego
-Defender Bonus = Bonus Obrońcy
+Defender Bonus = Premia Obrońcy
 Landing = Desant
 Flanking = Flankowanie
 vs [unitType] = przeciw [unitType]
@@ -770,25 +770,25 @@ Terrain = Teren
 Tile = Pole
 Missing resource = Brakujący surowiec
  # Requires translation!
-Adjacent units = 
+Adjacent units = Sąsiadujące jednostki
  # Requires translation!
-Adjacent enemy units = 
+Adjacent enemy units = Sąsiadujące wrogie jednostki
  # Requires translation!
-Combat Strength = 
+Combat Strength = Siła Bojowa
  # Requires translation!
-Across river = 
+Across river = Przez rzekę
  # Requires translation!
-Temporary Bonus = 
+Temporary Bonus = Tymczasowa Premia
  # Requires translation!
 Garrisoned unit = 
  # Requires translation!
-Attacking Bonus = 
+Attacking Bonus = Premia do ataku
  # Requires translation!
-defence vs [unitType] = 
+defence vs [unitType] = obrona przeciwko [unitType]
  # Requires translation!
-[tileFilter] defence = 
+[tileFilter] defence = [tileFilter] obrona
  # Requires translation!
-Defensive Bonus = 
+Defensive Bonus = Premia do obrony
  # Requires translation!
 Stacked with [unitType] = 
          
@@ -801,21 +801,21 @@ Conduct Trade Mission = Przeprowadź Misję Handlową
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Twoja misja handlowa do [civName] zapewniła ci [goldAmount] złota i [influenceAmount] wpływu!
 Hurry Wonder = Przyśpiesz Budowę Cudu
  # Requires translation!
-Hurry Construction = 
+Hurry Construction = Przyśpiesz Budowę
  # Requires translation!
-Hurry Construction (+[productionAmount]) = 
+Hurry Construction (+[productionAmount]) = Przyśpiesz Budowę (+[productionAmount])
  # Requires translation!
-Spread Religion = 
+Spread Religion = Szerz Religię
  # Requires translation!
-Spread [religionName] = 
+Spread [religionName] = Szerz [religionName]
  # Requires translation!
-Remove Heresy = 
+Remove Heresy =
  # Requires translation!
-Found a Religion = 
+Found a Religion = Załóż Religię
  # Requires translation!
-Enhance a Religion = 
+Enhance a Religion = Ulepsz Religię
  # Requires translation!
-Enhance [religionName] = 
+Enhance [religionName] = Ulepsz [religionName]
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele byli zadowoleni z twoich rządów tak długo, że imperium wkroczyło w Złotą Erę!
 You have entered the [newEra]! = Wkraczasz do nowej ery: [newEra]!
 [civName] has entered the [eraName]! = Cywilizacja [civName] wkracza do nowej ery: [eraName]!
@@ -835,26 +835,26 @@ All =
 Water = Wodnych
 Land = Ląd
  # Requires translation!
-Coastal = 
+Coastal = Nadbrzeżne
 River = Rzeczne
  # Requires translation!
-Open terrain = 
+Open terrain = Teren otwarty
 Rough terrain = Trudny teren
 Foreign Land = Obce Terytorium
  # Requires translation!
-Foreign = 
+Foreign = Obcy
 Friendly Land = Przyjacielskie Terytorium
 Water resource = Źródła wody
  # Requires translation!
-Bonus resource = 
+Bonus resource = Surowiec dodatkowy
  # Requires translation!
-Luxury resource = 
+Luxury resource = Surowiec dodatkowy
  # Requires translation!
-Strategic resource = 
+Strategic resource = Surowiec strategiczny
 Fresh water = Świeżej wody
 non-fresh water = Nieświeżej wody
  # Requires translation!
-Natural Wonder = 
+Natural Wonder = Cud Natury
          
 # improvementFilters 
          
@@ -862,7 +862,7 @@ Natural Wonder =
 All Road = 
 Great Improvement = Ulepszenie wielkiego człowieka
  # Requires translation!
-Great = 
+Great = Wielki
          
          
 Wonders = Cuda
@@ -897,17 +897,17 @@ Science victory = Zwycięstwo naukowe
 Cultural victory = Zwycięstwo kulturowe
 Conquest victory = Zwycięstwo militarne
  # Requires translation!
-Diplomatic victory = 
+Diplomatic victory = Zwycięstwo dyplomatyczne
 Complete all the spaceship parts\n to win! = Ukończ wszytskie części statku koszmicznego,\n aby wygrać!
 Complete 5 policy branches\n to win! = Ukończ 5 gałęzi ustrojów politycznych,\n aby wygrać!
  # Requires translation!
-Complete 5 policy branches and build\n the Utopia Project to win! = 
+Complete 5 policy branches and build\n the Utopia Project to win! = Ukończ 5 gałęzi ustrojów politycznych i wybuduj\n Projekt Utopijny aby wygrać!
 Destroy all enemies\n to win! = Zniszcz wszystkich wrogów,\n aby wygrać!
 You have won a scientific victory! = Osiągnięto zwycięstwo naukowe!
 You have won a cultural victory! = Osiągnięto zwycięstwo kulturowe!
 You have won a domination victory! = Osiągnięto zwycięstwo militarne!
  # Requires translation!
-You have won a diplomatic victory! = 
+You have won a diplomatic victory! = Wygrałeś zwycięstwem dyplmatycznym!
 You have won! = Wygrałeś!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Udało ci się zwyciężyć dzięki niesamowitej sile twojej kultury. Wielkość twojej cywilizacji - rozmach jej monumentów i twórczość artystów - wprawiły świat w zdumienie! Poeci będę cię sławić, dopóki piękno będzie dawać ukojenie skołatanym sercom.
 The world has been convulsed by war. Many great and powerful civilizations have fallen, but you have survived - and emerged victorious! The world will long remember your glorious triumph! = Świat został wypalony wojną. Wiele potężnych i wspaniałych cywilizacji legło w gruzach, ale tobie się udało przetrwać i odnieść zwycięstwo. Świat na długo zapamięta ten chwalebny triumf!
